added the database connection